--- a/Project Summary (Part III).Rmd
+++ b/Project Summary (Part III).Rmd
@@ -411,6 +411,9 @@ Does app category have a correlation with rating, which categories in the Google
 By grouping apps by category, we can determine the average rating by category and average price, as well as overall number of apps and number of apps  by category. The most common categories are family, game and tools; below the category distrubution of apps is shown.
 
 ```{r bar2, echo = F}
+
+# Plotting a barchart to show the number of apps in each category
+
 ggplot(googlePlay, aes(Category)) + 
         geom_bar(fill = viridis(33), color = 'black') +
         ggtitle('Number of Apps in the Google Playstore by Category') +
@@ -426,9 +429,11 @@ ggplot(googlePlay, aes(Category)) +
 To find the highest and lowest rated categories, the ratings were aggregated according to the app category and the mean was then found for each category. Once the means were found, they were then plotted and a conclusion was drawn.
 
 ```{r bary, echo = F}
+# Aggregate the apps by category and then find the mean rating of the apps for each category
 catrating <- aggregate(googlePlay$Rating, list(googlePlay$Category), mean, na.rm = TRUE)
 names(catrating) <- c('Category', 'Avg_Rating')
 
+# Once the mean rating values have been subsetted, plot a bar chart in descending order to show the average ratings by category
 ggplot(catrating, aes(x = reorder(Category, -Avg_Rating), y = Avg_Rating)) +
         geom_bar(stat = 'Identity', fill = viridis(33), color = 'black') +
         ggtitle('Average Rating of Apps in the Google Playstore by Category') +
@@ -442,10 +447,12 @@ ggplot(catrating, aes(x = reorder(Category, -Avg_Rating), y = Avg_Rating)) +
 Highest and Lowest Average Ratings by Category
 
 ```{r top rating, include=F}
+# Showing the top 5 rated categories
 head(catrating[order(catrating$Avg_Rating, decreasing = TRUE),], n = 5)
 ```
 
 ```{r bottom rating, include=F}
+# Showing the bottom 5 rated categories
 tail(catrating[order(catrating$Avg_Rating, decreasing = TRUE),], n = 5)
 ```
 
@@ -455,6 +462,7 @@ The highest rated categories on average are Events, Education and Art & Desgin, 
 
 To get the average price of each category, a new subset was created which just contained the paid apps. Then, similarly to the previous section, the prices were aggregated according to the category, the means were calculated and then plotted.
 ``` {r type2, include = F}
+# Subset the free and paid apps into two separate dataframes
 free <- subset(googlePlay, googlePlay$Type == 'Free')
 paid <- subset(googlePlay, googlePlay$Type == 'Paid')
 
@@ -463,10 +471,14 @@ print(nrow(paid))
 ```
 
 ```{r barx, echo = F}
+# Get rid of any characters which will interfere with the aggregation process
 paid$Cost = as.numeric(gsub("\\$", "", paid$Price))
+
+# Aggregate the apps by category and then find the mean price of the paid apps for each category
 catprice <- aggregate(paid$Cost, list(paid$Category), mean)
 names(catprice) <- c('Category', 'Avg_Price')
 
+# Plot a bar chart showing the average price for the paid apps by category
 ggplot(catprice, aes(x = Category, y = Avg_Price)) +
         geom_bar(stat = 'Identity', fill = viridis(28), color = 'black') + 
         ggtitle('Average Price of Paid Apps in the Google Playstore by Category') +
@@ -481,6 +493,7 @@ ggplot(catprice, aes(x = Category, y = Avg_Price)) +
 Highest Average Price by Category
 
 ```{r top paid, include=F}
+# Show the top 5 most expensive categories
 head(catprice[order(catprice$Avg_Price, decreasing = TRUE),], n = 5)
 ```
 
@@ -491,15 +504,18 @@ Even though most of the apps in the Google Play Store are free; with `r nrow(fre
 In this section, we would like to identify the most well rated app categories in the Google Play Store. We define ‘most well rated’ as ratings that are greater or equal to 4.8. The score 4.8 is chosen because 95% of app ratings in the Google Play Store are below 4.8. In other words, only 5% of the Google Play Store apps have ratings that are greater or equal to 4.8. Therefore, the 95th percentile helps us to filter the best rated apps.
 
 ```{r hist2}
+# Plot a histogram of the ratings in the google play store
 hist(googlePlay$Rating, main = 'Histogram of frequency rating for the Google Play Store', xlab = 'Rating', col = viridis(20))
 ```
 
 ```{r percentile, include = F}
+# Find the average rating for the 95th Percentile
 quantile(googlePlay$Rating, .95)
 ```
 According to the 95th percentile, the apps in the top 5% having a rating of 4.8 or higher.
 
 ```{r best rated, include=F}
+# Create a subset for apps which fall within the 95th percentile and then count the number of apps for each category 
 top_rated <- subset(googlePlay, googlePlay$Rating >= 4.8)
 top_count <- plyr::count(top_rated$Category)
 names(top_count) <- c('Category', 'Count')
@@ -509,6 +525,7 @@ top_count <- top_count[order(top_count$Count, decreasing = TRUE),]
 To find the categories containing the most apps with a rating of 4.8 or greater, a new subset was created from the Google Play Store dataframe which only contained apps with a rating of 4.8 or greater. There are `r nrow(top_rated)` apps which fall within the highly rated threshold of 4.8. After this, the number of apps from each catergory within this subset was obtained and  plotted in a bar chart to graphically demonstrate the distrubution of highly rated apps within different categories.
 
 ```{r topplot}
+# Plot a bar chart showing the number of apps in each category which have a rating of 4.8 or higher (which falls within the 95th percentile)
 ggplot(top_count, aes(x = reorder(Category, -Count), y = Count)) +
         geom_bar(stat = 'Identity', fill = plasma(32), color = 'black') + 
         ggtitle('Highly Rated Apps in the Google Play Store by Category') +
@@ -524,6 +541,7 @@ ggplot(top_count, aes(x = reorder(Category, -Count), y = Count)) +
 Categories with the most highly rated apps.
 
 ```{r topr, include=F}
+# Show the top 5 categories with the most highly rated apps
 head(top_count[order(top_count$Count, decreasing = TRUE),], n = 5)
 ```
 
@@ -816,10 +834,9 @@ Throughout our EDA process, we have derived many useful insights from the Google
 
 Shifting attention to solely the Google Play Store data, our next section broke out ratings and price information by app category. It was interesting to see that the highest rated apps were in the Events category and that the lowest rated were in the Dating category. Finance and Lifestyle apps were by far the most expensive. When zeroing in on apps in the 95th rating percentile (4.8 or higher), the Family category came out on top.
 
-Furthermore, we examined how the apps are influenced by price in the next section. We observed the top rated categories among free are respectively: Events, Education, Books and Reference, Parenting and Art & Design; while those of paid apps include: News & Magazines, Education, Art & Design, Auto & Vehicles and Entertainment. In addition, we compared the average ratings of apps across different categories and discovered there was significant difference in the average ratings across the different app categories (Cheap, Expensive and Very Expensive)
+We then analyzed differences in characteristics between price levels (cheap, expensive, and very expensive) across paid apps and concluded that there is a significant difference in the average ratings across price levels. Very expensive apps had a much lower rating than cheap and expensive apps, but the number of very expensive apps (as well as expensive apps) paled in comparison to the number of cheap apps.
 
-Finally, the preceding section explores relationships between different numerical variables in Google PlayStore. It was interesting to find out that the variables not closely correlated. An attempt to fit different linear models with the rating variable as the target variable produced low values of coefficient of determination (r2), implying a only small variation in rating can be explained by a variation in the other variables (price and number of installs) in the model.
-
+Finally, we determined that this data would not produce a very reliable linear regression model as the r squared value is too low to draw any meaningful conclusions. We will explore this further in the next section.
 
 ### 7.2: Brainstorming for Future Data Utilization
 
